--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<h1>进才中学南校自主管理委员会</h1>
+<head>
+<title>信息部任务栏</title>
+<style>
+th{
+font:bold
+}
+</style>
+</head>
+<body>
+<h1>进才中学南校自主管理委员会 信息技术部门</h1>
+<table border="0">
+  <tr>
+    <th>人员姓名</th>
+    <th>所属班级</th>
+    <th>从事职务</th>
+  </tr>
+  <tr>
+    <td>杨承</td>
+    <td>七年一班</td>
+    <td>部长、视频处理</td>
+  </tr>
+  <tr>
+    <td>普悦欣</td>
+    <td>七年四班</td>
+    <td>副部长、图片拍摄</td>
+  </tr>
+  <tr>
+    <td>朱诚鸣</td>
+    <td>七年二班</td>
+    <td>助理、图片处理</td>
+  </tr>
+</table>
+</body>
