--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>进才中学南校自主管理委员会 信息技术部门</h1>
-        <table border="1">
+        <table border="1" id="members">
             <tbody>
 				<tr>
                     <th>人员姓名</th>
